package edu.hitsz.EnemyFactory;

import edu.hitsz.aircraft.EnemyAircraft;

public interface EnemyFactory {

    public abstract EnemyAircraft createEnemy();
}
